# this is the main Makefile.am

# first of all, parse the subdirectories in the order given
SUBDIRS = src tests doc patches outputs

# then do stuff in this directory. Actually, we just need to add the
# bootstrap script to the distribution (for curious users, not really needed).

EXTRA_DIST = bootstrap
