# This is the Makefile.am that deals with the program proper.
# It all works automagically.

bin_PROGRAMS = unrtf

AM_CPPFLAGS = -DPKGDATADIR=\"$(pkgdatadir)\"

unrtf_SOURCES = attr.c attr.h         \
		convert.c convert.h   \
		defs.h 		      \
		error.c error.h       \
	        hash.c hash.h         \
		my_iconv.c my_iconv.h \
		main.c main.h         \
		malloc.c malloc.h     \
		output.c output.h     \
		parse.c	parse.h       \
		path.c path.h \
		unicode.c unicode.h   \
		user.c user.h         \
		util.c util.h         \
		word.c word.h

